Learning Project/src/objects/buyer__c.object
<CustomObject>
    <description>list of users</description>
    <fields>
        <fullName>All_values__c</fullName>
        <label>All values</label>
        <picklist>
            <controllingField>types__c</controllingField>
            <picklistValues>
                <fullName>biographies</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>children fiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fantasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>inspirational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>self-help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>spiritual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>thriller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>auto_number__c</fullName>
        <label>auto number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>categories__c</fullName>
        <label>categories</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>complete_values__c</fullName>
        <label>complete values</label>
        <picklist>
            <controllingField>fiction__c</controllingField>
            <picklistValues>
                <fullName>biographies</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>children fiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fantasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>inspirational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>self-help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>spiritual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>thriller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fiction__c</fullName>
        <label>fiction</label>
        <picklist>
            <picklistValues>
                <fullName>children fiction</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fantasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>thriller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>media_issued__c</fullName>
        <label>media issued</label>
        <summaryForeignKey>media__c.buyer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>non_fiction__c</fullName>
        <label>non-fiction</label>
        <picklist>
            <picklistValues>
                <fullName>self-help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>spiritual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>biographies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>inspirational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sub_category__c</fullName>
        <label>sub-category</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>types__c</fullName>
        <label>types</label>
        <picklist>
            <picklistValues>
                <fullName>fiction</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>non-fiction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>buyer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>buyers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>